# src/Cifra.Api.Client/swagger.json
@@ -128,6 +128,58 @@
         }
       }
     },
+    "/api/v{version}/Class/{classId}": {
+      "get": {
+        "tags": [
+          "Class"
+        ],
+        "summary": "Get a class.",
+        "parameters": [
+          {
+            "name": "classId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "version",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns class",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetClassResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetClassResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetClassResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "List could not be retrieved"
+          }
+        }
+      }
+    },
     "/api/v{version}/Class/{classId}/Student": {
       "post": {
         "tags": [
@@ -784,6 +836,15 @@
         },
         "additionalProperties": false,
         "description": "The result of the Get All Tests operation"
+      },
+      "GetClassResponse": {
+        "type": "object",
+        "properties": {
+          "class": {
+            "$ref": "#/components/schemas/Class"
+          }
+        },
+        "additionalProperties": false
       },
       "Metadata": {
         "type": "object",
