# src/Cifra.Api/V1/Models/Class/Responses/GetClassResponse.cs
@@ -1,0 +1,11 @@
+﻿
+namespace Cifra.Api.V1.Models.Class.Responses
+{
+    public class GetClassResponse
+    {
+        /// <summary>
+        /// The class
+        /// </summary>
+        public Class Class { get; set; }
+    }
+}
